Babel, gulpfile - small changes, added some styles

--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,22 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Hello World</title>
+    <title>EPLOYED LIST</title>
     <!-- inject:css -->
     <!-- endinject -->
 </head>
 <body>
-    <h1>Hello world!</h1>
+
+    <div class="employed">
+        <div class="employed__form">
+            <h1 class="employed__form__header">eployed list</h1>
+            <input type="text" class="employed__form__input" placeholder="Type some text here">
+            <input type="submit" class="employed__form__submit" value="+">
+        </div>
+        <ul class="employed__list">
+            <li class="employed__list__employee">Frank Colins</li>
+        </ul>
+    </div>
 
     <!-- inject:js -->
     <!-- endinject -->
