Added working functions using ES6

--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,10 @@
         <div class="employed__form">
             <h1 class="employed__form__header">eployed list</h1>
             <input type="text" class="employed__form__input" placeholder="Type some text here">
-            <input type="submit" class="employed__form__submit" value="+">
+            <input type="submit" class="employed__form__submit" onclick="employees.addEmployeeOnClick()" value="+">
         </div>
         <ul class="employed__list">
-            <li class="employed__list__employee">Frank Colins</li>
+            <li class="employed__list__employee">Test v2</li>
         </ul>
     </div>
 
