--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,11 @@
 <body>
 
     <div class="employed">
-        <div class="employed__form">
+        <form class="employed__form">
             <h1 class="employed__form__header">eployed list</h1>
             <input type="text" class="employed__form__input" placeholder="Type some text here">
             <input type="submit" class="employed__form__submit" onclick="employees.addEmployeeOnClick()" value="+">
-        </div>
+        </form>
         <ul class="employed__list">
             <li class="employed__list__employee">Test v2</li>
         </ul>
