Remove employee button added, font-awesome added

--- a/src/index.html
+++ b/src/index.html
@@ -13,12 +13,12 @@
 
     <div class="employed">
         <form class="employed__form">
-            <h1 class="employed__form__header">eployed list</h1>
+            <i class="fas fa-list-alt"></i><h1 class="employed__form__header">eployed list</h1>
             <input type="text" class="employed__form__input" placeholder="Type some text here">
-            <input type="submit" class="employed__form__submit" onclick="employees.addEmployeeOnClick()" value="+">
+            <input type="submit" class="employed__form__submit" onclick="employees.addEmployeeOnClick(event)" value="+">
         </form>
         <ul class="employed__list">
-            <li class="employed__list__employee">Test v2</li>
+            <li class="employed__list__employee"><i class="far fa-user"></i> Loading data..</li>
         </ul>
     </div>
 
